Add ability to associate cocktails and ingredients
