# backend/dtos/cocktail_ingredient.go
@@ -1,0 +1,11 @@
+package dtos
+
+type CocktailIngredientDto struct {
+	Quantity float32 `json:"quantity"`
+}
+
+type CocktailIngredientResultDto struct {
+	CocktailID   int    `json:"cocktailId"`
+	IngredientID int    `json:"ingredientId"`
+	Quantity     float32 `json:"quantity"`
+}
