# backend/dtos/ingredient.go
@@ -1,0 +1,9 @@
+package dtos
+
+type IngredientDto struct {
+	Name string `json:"name"`
+}
+
+type IngredientResultDto struct {
+	Name string `json:"name"`
+}
