# backend/models/cocktail.go
@@ -6,4 +6,6 @@ type Cocktail struct {
 	gorm.Model
 	Title    string
 	ImageURL string
+	
+	Ingredients []Ingredient `gorm:"many2many:cocktail_ingredients;"`
 }
