# backend/models/cocktail_ingredient.go
@@ -1,7 +1,7 @@
 package models
 
 type CocktailIngredient struct {
-	CocktailID   int `json:"cocktail_id"`
-	IngredientID int `json:"ingredient_id"`
-	Quantity     int `json:"quantity"`
+	CocktailID   int `gorm:"primaryKey"`
+	IngredientID int `gorm:"primaryKey"`
+	Quantity     float32
 }
